# synth_fs

./: .gitignore  CMakeLists.txt  README.md  fix_sample_rates.py  loop_detection.cpp  loop_detection.h  main.cpp  pitch_detect.py  renamer.py  shifter.py
lib/: solfege  synthinf
lib/fatfs/: diskio.c  ff.c  ff.h  ffconf.h
lib/glcd/: font.h
lib/sfs/: sfs.c  sfs.h  synth_fs.c  synth_fs.h
lib/wav/: wav.c  wav.h
workdir/: synth-font
workdir/instruments/: hold.json
